src/tui/snapshots/mimir__tui__note_pane__tests__editing_note_scroll.snap
---
source: src/tui/note_pane.rs
expression: terminal.backend()
---
"┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃                                      ┃"
"┃                                      ┃"
"┃an the width of the screen.           ┃"
"┃                                      ┃"
"┃                                      ┃"
"┃                                      ┃"
"┗ Note name.md ━━━━━━━━━━━━━━━━━━ EDIT ┛"
