src/tui/snapshots/mimir__tui__note_pane__tests__with_raw_note.snap
---
source: src/tui/note_pane.rs
expression: terminal.backend()
---
"┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━Note without extension━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃# This is not a markdown document and should not be rendered as such.         ┃"
"┃- This should not be rendered as a list                                       ┃"
"┃- And [[this is|not a link]]                                                  ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ Exit <Q> ┛"
